--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,9 @@ categories = ["ringbuffer"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-disk-ringbuffer = "0.1.0"
+clap = { version = "4.5.8", features = ["derive"] }
+ctrlc = { version = "3.4.4", features = ["termination"] }
+disk-ringbuffer = { git = "https://github.com/MostlyMax/disk-ringbuffer.git", branch = "maxi/doing-it-all" }
+env_logger = "0.11.3"
+log = "0.4.22"
+tokio = { version = "1.38.0", features = ["full"] }
