--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ disk-ringbuffer = { git = "https://github.com/MostlyMax/disk-ringbuffer.git", br
 env_logger = "0.11.3"
 log = "0.4.22"
 tokio = { version = "1.38.0", features = ["full"] }
+tokio-util = { version = "0.7.11", features = ["full"] }
