--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ tokio = { version = "1.38.0", features = ["full"] }
 tokio-stream = "0.1.15"
 tokio-util = { version = "0.7.11", features = ["full"] }
 tracing = "0.1.40"
+memmap2 = "0.9.4"
