--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,7 @@ ctrlc = { version = "3.4.4", features = ["termination"] }
 disk-ringbuffer = { git = "https://github.com/MostlyMax/disk-ringbuffer.git", branch = "maxi/doing-it-all" }
 env_logger = "0.11.3"
 log = "0.4.22"
+num = "0.4.3"
+num-derive = "0.4.2"
+num-traits = "0.2.19"
 tokio = { version = "1.38.0", features = ["full"] }
