--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ num-derive = "0.4.2"
 num-traits = "0.2.19"
 thiserror = "1.0.63"
 tokio = { version = "1.38.0", features = ["full"] }
+tokio-scoped = "0.2.0"
