--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,13 @@ license = "MIT"
 [dependencies]
 clap = { version = "4.5.8", features = ["derive"] }
 ctrlc = { version = "3.4.4", features = ["termination"] }
-disk-ringbuffer = "0.7.4"
-env_logger = "0.11.3"
-log = "0.4.22"
+disk-mpmc = "0.1.1"
 num = "0.4.3"
 num-derive = "0.4.2"
 num-traits = "0.2.19"
 thiserror = "1.0.63"
 tokio = { version = "1.38.0", features = ["full"] }
 tokio-scoped = "0.2.0"
+tokio-util = { version = "0.7.12", features = ["rt"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
