--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.5.8", features = ["derive"] }
+clap = { version = "4.5.8", features = ["derive", "string"] }
 ctrlc = { version = "3.4.4", features = ["termination"] }
 disk-mpmc = "0.4.2"
 num = "0.4.3"
