--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "franz"
-version = "0.4.2"
+version = "0.7.2"
 edition = "2021"
 authors = ["Maxi Saparov <max.saparov@gmail.com>"]
 description = "[WIP] a small, friendly, simple alternative to Apache Kafka"
@@ -13,14 +13,13 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.5.8", features = ["derive"] }
+clap = { version = "4.5.8", features = ["derive", "string"] }
 ctrlc = { version = "3.4.4", features = ["termination"] }
-disk-ringbuffer = "0.7.4"
-env_logger = "0.11.3"
-log = "0.4.22"
+disk-mpmc = "0.4.2"
 num = "0.4.3"
 num-derive = "0.4.2"
 num-traits = "0.2.19"
 thiserror = "1.0.63"
-tokio = { version = "1.38.0", features = ["full"] }
 tokio-scoped = "0.2.0"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
