--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,11 @@ disk-mpmc = "0.4.2"
 num = "0.4.3"
 num-derive = "0.4.2"
 num-traits = "0.2.19"
+opentelemetry = "0.26.0"
+opentelemetry-stdout = "0.26.0"
+opentelemetry_sdk = "0.26.0"
 thiserror = "1.0.63"
 tokio-scoped = "0.2.0"
 tracing = "0.1.40"
+tracing-opentelemetry = "0.27.0"
 tracing-subscriber = "0.3.18"
